| Bug #6600 | Stored procedure crash after repeated calls with check table | ||
|---|---|---|---|
| Submitted: | 12 Nov 2004 19:58 | Modified: | 31 Mar 2005 9:46 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Per-Erik Martin | CPU Architecture: | Any |
[18 Mar 2005 16:10]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23178
[18 Mar 2005 16:20]
Per-Erik Martin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
[30 Mar 2005 11:28]
Per-Erik Martin
Reopening, since it turned out tha the fix was incorrect.
[30 Mar 2005 16:03]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23496
[10 May 2006 19:44]
Harri Sylvander
You might want to update the documentation to reflect this change. Documentation on stored routines' restrictions still says restrictions on CHECK TABLES and OPTIMIZE TABLES was lifted in 5.0.17. Sincerely, Harri Sylvander

Description: A procedure contains "CHECK TABLE view_name", a mistake. I call the procedure three times. The first time: okay. The second time: packet error. The third time: crash. How to repeat: mysql> create table tg (s1 decimal(31,30)); Query OK, 0 rows affected (0.27 sec) mysql> create view vg as select * from tg; Query OK, 0 rows affected (0.01 sec) mysql> create procedure pg () check table vg; Query OK, 0 rows affected (0.00 sec) mysql> call pg(); +--------+-------+----------+------------------------ ----+ | Table | Op | Msg_type | Msg_text | +--------+-------+----------+------------------------ ----+ | db5.vg | check | error | 'db5.vg' is not BASE TA BLE | +--------+-------+----------+------------------------ ----+ 1 row in set (0.01 sec) mysql> call pg(); Packets out of order (Found: 9, expected 1) ERROR 2013 (HY000): Lost connection to MySQL server d uring query mysql> call pg(); ERROR 2006 (HY000): MySQL server has gone away No connection. Trying to reconnect... Connection id: 2 Current database: db5 Didn't find any fields in table 'vg' ERROR 2006 (HY000): MySQL server has gone away No connection. Trying to reconnect... ERROR 2002 (HY000): Can't connect to local MySQL serv er through socket '/tmp/mysql.sock' (111) ERROR: Can't connect to the server mysql> select version(); No connection. Trying to reconnect... Connection id: 1 Current database: db5 Didn't find any fields in table 'vg' ERROR 2006 (HY000): MySQL server has gone away No connection. Trying to reconnect... ERROR 2002 (HY000): Can't connect to local MySQL server through socket '/tmp/mysql.sock' (111) ERROR: Can't connect to the server